For coding skills visualisation only

--- a/ci/deploy/staging/.env
+++ b/ci/deploy/staging/.env
@@ -1,6 +1,6 @@
 APP_ENV=prod
 APP_SECRET=255c59054a6f6812a289165f6f72990f
-DATABASE_URL=mysql://root:evV9FM9b7J666mc2w6NHAji2C@sprintechnology.cmlwppzkcq35.eu-west-3.rds.amazonaws.com:3306/watthelp_staging
+DATABASE_URL=mysql://root:evV9FM9b7J666mc2w6NHAji2C@127.0.0.1:3306/watthelp_staging
 
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
