--- a/ci/deploy/production/.env
+++ b/ci/deploy/production/.env
@@ -1,6 +1,6 @@
 APP_ENV=prod
 APP_SECRET=255c59054a6f6812a289165f6f72990f
-DATABASE_URL=mysql://root:Aw4QUvtT3ez3Xr9953BapLuLN3L6k9@watthelp.cbdsevye3apt.eu-west-3.rds.amazonaws.com:3306/watthelp
+DATABASE_URL=mysql://root:Aw4QUvtT3ez3Xr9953BapLuLN3L6k9@127.0.0.1:3306/watthelp
 
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
