For coding skills visualisation only

--- a/.env.dist.docker
+++ b/.env.dist.docker
@@ -20,8 +20,8 @@ JWT_TTL=31536000
 ###< lexik/jwt-authentication-bundle ###
 
 ###> aws/aws-sdk-php-symfony ###
-AWS_KEY=AKIARWC3E5YOMMD5NMDO
-AWS_SECRET=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
+AWS_KEY=AWS_KEY
+AWS_SECRET=AWS_SECRET
 AWS_BUCKET=sprint-watthelp-file
 AWS_REGION=eu-west-3
 ###< aws/aws-sdk-php-symfony ###
